💄 Footer mail contrast fix

--- a/client/src/components/footer/footer.styles.css
+++ b/client/src/components/footer/footer.styles.css
@@ -104,7 +104,7 @@ section {
 }
 
 .footer-distributed .footer-center p a {
-  color: lightseagreen;
+  color: #9c27b0;
   text-decoration: none;
 }
 
